Fixed alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,9 @@
+*{
+  text-align: center;
+}
+
 header{
-   background-color: rgba(255, 255, 255, 0.9);
-   text-align: center;
+   background-color: rgb(232, 239, 252);
 }
 header, h2{
   font-family: "Syncopate";
